tests/snapshots/run_wpt_conformance__litert_scatterElements_float32_tensors_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterElements.https.any.js scatterElements float32 tensors along axis 0, litert
 Failed to convert graph: graph conversion failed for litert: scatterElements: non-constant indices not yet supported

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    indices: i32[2, 3];
    input: f32[3, 3];
    updates: f32[2, 3];
  }

  nodes {
    [output] = scatterElements(input, indices, updates, axis=0, label="");
  }

  outputs { output; }
}
