tests/snapshots/run_wpt_conformance__litert_scatterElements_float32_tensors_along_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterElements.https.any.js scatterElements float32 tensors along axis 1, litert
 Failed to convert graph: graph conversion failed for litert: scatterElements: non-constant indices not yet supported

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    indices: i32[1, 2];
    input: f32[1, 5];
    updates: f32[1, 2];
  }

  nodes {
    [output] = scatterElements(input, indices, updates, axis=1, label="");
  }

  outputs { output; }
}
